--- a/cedar-app/package.json
+++ b/cedar-app/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "immer": "^9.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
